--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -46,8 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OneArgument\Absolute.cs" />
-    <Compile Include="Division.cs" />
+    <Compile Include="TwoArgument\Division.cs" />
     <Compile Include="OneArgument\IOperation.cs" />
+    <Compile Include="OneArgument\OneArgumentFactory.cs" />
     <Compile Include="TwoArgument\IOperation.cs" />
     <Compile Include="TwoArgument\Multiplication.cs" />
     <Compile Include="OneArgument\Sin.cs" />
@@ -61,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoArgument\TwoArgumentFactory.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
