--- a/Calculator/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator/Calculator.Tests/Calculator.Tests.csproj
@@ -48,6 +48,10 @@
     <Compile Include="OneArgument\OneArgumetFactoryTests.cs" />
     <Compile Include="OneArgument\SinTests.cs" />
     <Compile Include="OneArgument\SqrtTests.cs" />
+    <Compile Include="SortinfOfMassivs\BubbleSortTests.cs" />
+    <Compile Include="SortinfOfMassivs\GhomeSortTests.cs" />
+    <Compile Include="SortinfOfMassivs\HeapSortTests.cs" />
+    <Compile Include="SortinfOfMassivs\InsertionSortTests.cs" />
     <Compile Include="TwoArguments\MultiplicationTests.cs" />
     <Compile Include="TwoArguments\DivisionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
