--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -49,12 +49,12 @@
     <Compile Include="OneArgument\Cos.cs" />
     <Compile Include="OneArgument\Factorial.cs" />
     <Compile Include="OneArgument\Sqrt.cs" />
-    <Compile Include="SortingOfMassivs\InsertionSort.cs" />
-    <Compile Include="SortingOfMassivs\GnomeSort.cs" />
-    <Compile Include="SortingOfMassivs\HeapSort.cs" />
-    <Compile Include="SortingOfMassivs\IOperation.cs" />
-    <Compile Include="SortingOfMassivs\BubbleSort.cs" />
-    <Compile Include="SortingOfMassivs\SortingOfMassivsFactory.cs" />
+    <Compile Include="SortingOfArrays\InsertionSort.cs" />
+    <Compile Include="SortingOfArrays\GnomeSort.cs" />
+    <Compile Include="SortingOfArrays\HeapSort.cs" />
+    <Compile Include="SortingOfArrays\IOperation.cs" />
+    <Compile Include="SortingOfArrays\BubbleSort.cs" />
+    <Compile Include="SortingOfArrays\SortingOfArraysFactory.cs" />
     <Compile Include="TwoArgument\Division.cs" />
     <Compile Include="OneArgument\IOperation.cs" />
     <Compile Include="OneArgument\OneArgumentFactory.cs" />
